# cbanking

./: CMakeLists.txt  Dockerfile  History.md  bugs.txt
container/: Dockerfile
include/: Exception.hpp
include/API/: AccountAPI.hpp  AccountAPI.tpp  NewsAPI.hpp  OperationAPI.hpp  PersistenceAPI.hpp  PersistenceAPI.tpp  PersonAPI.hpp  PersonAPI.tpp  SessionAPI.hpp  SessionAPI.tpp
include/Core/: DBConnection.hpp
include/Entity/: Account-odb.hxx  Account.hpp  Entity.hpp  News-odb.hxx  News-odb.ixx  News.hpp  Operation-odb.hxx  Operation-odb.ixx  Operation.hpp  Persons-odb.hxx  Persons-odb.ixx  Persons.hpp
include/Rest/: FCMNotification.hpp  RequestHandler.hpp  Rest.hpp
include/Util/: Crypto.hpp  JSONValidator.hpp  RegularFile.hpp
include/Util/Converter/: AccountConverter.hpp  Converter.hpp  ConverterCache.hpp  Converters.hpp  CurrentAccountConverter.hpp  CustomerConverter.hpp  EmployeeConverter.hpp  NewsConverter.hpp  OperationConverter.hpp  PersonConverter.hpp  SavingsAccount.hpp
resources/database/: db_config.json  db_config.schema.json
resources/fcm/: fcm.config.json
resources/json schema/: account.schema.json  instanceappid.schema.json  news.schema.json  operation.schema.json  operation.shema.json  signin.schema.json  signup.schema.json  update_user.schema.json  virement.schema.json
resources/network/: net_config.json  net_config.schema.json
resources/sql/: Account.sql  Backup.sql  Database.sql  News.sql  Operation.sql  Persons.sql
src/: Exception.cpp  Exception.hpp  SessionAPI.cpp  main.cpp
src/API/: AccountAPI.hpp  PersistenceAPI.hpp  PersistenceAPI.tpp  PersonAPI.cpp  PersonAPI.hpp  PersonAPI.tpp
src/Core/: DBConnection.cpp  DBConnection.hpp
src/Entity/: Account-odb.cxx  Account-odb.hxx  Account-odb.ixx  Account.cpp  Account.hpp  Entity.hpp  News-odb.cxx  News.cpp  Operation-odb.cxx  Operation-odb.hxx  Operation.cpp  Operation.hpp  Persons-odb.cxx  Persons-odb.hxx  Persons-odb.ixx  Persons.cpp  Persons.hpp  entity.sh  generate_sql_and_drivers  testEntity.cpp
src/Rest/: FCMNotification.cpp  RequestHandler.cpp  Rest.cpp
src/Util/: Crypto.cpp  JSONValidator.cpp  RegularFile.cpp
src/Util/Converter/: AccountConverter.cpp  ConverterCache.hpp  CurrentAccountConverter.cpp  CustomerConverter.cpp  EmployeeConverter.cpp  NewsConverter.cpp  OperationConverter.cpp  PersonConverter.cpp  SavingsAccountConverter.cpp
test/: Makefile  run_persistence_tests  run_utils_tests  test_dbconnection.cpp  test_entities.cpp
test/dbconnection/: CMakeLists.txt  Makefile  test_dbconnection.cpp
test/entity/: CMakeLists.txt  Makefile  test_entities.cpp
test/fcm/: CMakeLists.txt  FCMNotificationTest.cpp
test/persistenceAPI/: CMakeLists.txt  Makefile  test_persistence_api.cpp
test/personAPI/: CMakeLists.txt  test_personapi.cpp
test/sessionAPI/: CMakeLists.txt  test_create_root_session.cpp
test/sessionEntity/: CMakeLists.txt  test_session.cpp
test/util/converter/account/: CMakeLists.txt  test_account_converter.cpp
test/util/converter/currentaccount/: CMakeLists.txt  test_currentaccount_converter.cpp
test/util/converter/customer/: CMakeLists.txt  test_customer_converter.cpp
test/util/converter/employee/: CMakeLists.txt  test_employee_converter.cpp
test/util/converter/operation/: CMakeLists.txt  test_operation_converter.cpp
test/util/converter/person/: CMakeLists.txt  test_person_converter.cpp
test/util/converter/savingsaccount/: CMakeLists.txt  test_savingsaccount_converter.cpp
test/util/crypto/: CMakeLists.txt  test_crypto.cpp
test/util/json_is_valid/: CMakeLists.txt  account_test1.json  account_test2.json  account_test3.json  account_test4.json  account_test5.json  test_json_is_valid.cpp
