#cmake_minimum_required(VERSION 3.5)

#project(project_name)

#add_executable (

	# Nom de l'application
	# Fichiers sources
#)

# edition de lien
#target_link_libraries (

	# Nom de l'application
#	libpthread.so
#	libodb-2.4.so
#	libodb-mysql-2.4.so
#)

#target_compile_features(project_name PUBLIC cxx_std_14)